--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 
 # flutter pub upgrade --major-versions
-version: 1.0.0+1
+version: 1.0.3+5
 
 environment:
   sdk: ">=3.5.0 <4.0.0"
@@ -127,6 +127,7 @@ flutter:
     - assets/htmls/
     - assets/fonts/
     - dummy_assets/
+    - shorebird.yaml
   fonts:
     - family: PublicSansSerif
       fonts:
